--- a/html/webpage.html
+++ b/html/webpage.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="webpage.css">
-    <link rel="stylesheet" href="webresponsive.css">
+    <link rel="stylesheet" href="../css/webpage.css">
+    <link rel="stylesheet" href="../css/webresponsive.css">
     <title>iEducate - Transforming Online Education</title>
 </head>
 
